welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:46: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime105.SnakeBuggle'
override def run() {
             ^