welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
// Fonction qui test si le Buggle est dans un angle (position finale)
def fonctionTest() {
	var test1 = estFaceMur
	var test2 = getDirection()==Direction.EST
	(test1,test2) match {
		case (true,true) => gauche(); if (estFaceMur) {droite(); return true}
		case (false,true)=> droite(); if (estFaceMur) {gauche(); return true}
		case (_,_)	  => return false
	}
}

baisseBrosse()
while (fonctionTest()==false)
	{if (estFaceMur)
		{if (getDirection()==Direction.EST)
			{gauche()
			avance()
			gauche()
			avance()}
		else {droite()
			avance()
			droite()
			avance()}
		}
	else {avance()}
	}
}

















override def run() {
// Fonction qui test si le Buggle est dans un angle (position finale)
def fonctionTest() {
	(getDirection()==Direction.EST,estFaceMur) match {
		case (true,true) => gauche(); if (estFaceMur) {droite(); return true}
		case (false,true)=> droite(); if (estFaceMur) {gauche(); return true}
		case (_,_)	  => return false
	}
}

baisseBrosse()
while (fonctionTest()==false)
	{if (estFaceMur)
		{if (getDirection()==Direction.EST)
			{gauche()
			avance()
			gauche()
			avance()}
		else {droite()
			avance()
			droite()
			avance()}
		}
	else {avance()}
	}
}

